projects/vb6parse/snapshots/parsers/cst/library/interaction/doevents/doevents_with_parentheses.snap
---
source: projects/vb6parse/tests/library/interaction/doevents.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: CallStatement
      children:
        - kind: Identifier
          text: DoEvents
        - kind: LeftParenthesis
          text: (
        - kind: ArgumentList
          children: []
        - kind: RightParenthesis
          text: )
        - kind: Newline
          text: "\n"
